// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/Pluggable should match snapshot with extended component 1`] = `
<div>
  <span
    data-testid="pluginId"
  >
    <ProfilePopoverPlugin
      webSocketClient={
        WebSocketClient {
          "_currentUserId": undefined,
          "_currentUserTeamId": undefined,
          "_presenceChannelId": undefined,
          "_teamId": undefined,
          "_userId": undefined,
          "_userTeamId": undefined,
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "currentPresence": "",
          "currentTeam": "",
          "currentTeamUser": "",
          "currentUser": null,
          "errorCallback": null,
          "errorCount": 0,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "otherServersMessageListeners": Set {},
          "otherTeams": Array [],
          "otherTeamsChannel": Object {},
          "presenceChannel": null,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "reconnecting": false,
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
          "socketId": null,
          "teamChannel": null,
          "userChannel": null,
          "userTeamChannel": null,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with extended component with pluggableName 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName="PopoverSection1"
>
  <PluggableErrorBoundary
    key="PopoverSection1"
    pluginId=""
  >
    <ProfilePopoverPlugin
      webSocketClient={
        WebSocketClient {
          "_currentUserId": undefined,
          "_currentUserTeamId": undefined,
          "_presenceChannelId": undefined,
          "_teamId": undefined,
          "_userId": undefined,
          "_userTeamId": undefined,
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "currentPresence": "",
          "currentTeam": "",
          "currentTeamUser": "",
          "currentUser": null,
          "errorCallback": null,
          "errorCount": 0,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "otherServersMessageListeners": Set {},
          "otherTeams": Array [],
          "otherTeamsChannel": Object {},
          "presenceChannel": null,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "reconnecting": false,
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
          "socketId": null,
          "teamChannel": null,
          "userChannel": null,
          "userTeamChannel": null,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with no extended component 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName=""
/>
`;

exports[`plugins/Pluggable should match snapshot with non-null pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableId="pluggableId"
  pluggableName="PopoverSection1"
/>
`;

exports[`plugins/Pluggable should match snapshot with null pluggableId 1`] = `
<Pluggable
  components={
    Object {
      "AppBar": Array [],
      "CallButton": Array [],
      "ChannelHeaderButton": Array [],
      "CodeBlockAction": Array [],
      "CreateBoardFromTemplate": Array [],
      "DesktopNotificationHooks": Array [],
      "FilePreview": Array [],
      "FilesWillUploadHook": Array [],
      "LinkTooltip": Array [],
      "MainMenu": Array [],
      "MobileChannelHeaderButton": Array [],
      "NeedsTeamComponent": Array [],
      "NewMessagesSeparatorAction": Array [],
      "PopoverSection1": Array [
        Object {
          "component": [Function],
          "id": "",
          "pluginId": "",
        },
      ],
      "PostAction": Array [],
      "PostDropdownMenu": Array [],
      "PostEditorAction": Array [],
      "Product": Array [],
      "RightHandSidebarComponent": Array [],
      "UserGuideDropdownItem": Array [],
    }
  }
  pluggableName="PopoverSection1"
>
  <PluggableErrorBoundary
    key="PopoverSection1"
    pluginId=""
  >
    <ProfilePopoverPlugin
      webSocketClient={
        WebSocketClient {
          "_currentUserId": undefined,
          "_currentUserTeamId": undefined,
          "_presenceChannelId": undefined,
          "_teamId": undefined,
          "_userId": undefined,
          "_userTeamId": undefined,
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "currentPresence": "",
          "currentTeam": "",
          "currentTeamUser": "",
          "currentUser": null,
          "errorCallback": null,
          "errorCount": 0,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "otherServersMessageListeners": Set {},
          "otherTeams": Array [],
          "otherTeamsChannel": Object {},
          "presenceChannel": null,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "reconnecting": false,
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
          "socketId": null,
          "teamChannel": null,
          "userChannel": null,
          "userTeamChannel": null,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;

exports[`plugins/Pluggable should match snapshot with valid pluggableId 1`] = `
<div>
  <span
    data-testid="pluginId"
  >
    <ProfilePopoverPlugin
      webSocketClient={
        WebSocketClient {
          "_currentUserId": undefined,
          "_currentUserTeamId": undefined,
          "_presenceChannelId": undefined,
          "_teamId": undefined,
          "_userId": undefined,
          "_userTeamId": undefined,
          "closeCallback": null,
          "closeListeners": Set {},
          "conn": null,
          "connectFailCount": 0,
          "connectionId": "",
          "connectionUrl": null,
          "currentPresence": "",
          "currentTeam": "",
          "currentTeamUser": "",
          "currentUser": null,
          "errorCallback": null,
          "errorCount": 0,
          "errorListeners": Set {},
          "eventCallback": null,
          "firstConnectCallback": null,
          "firstConnectListeners": Set {},
          "messageListeners": Set {},
          "missedEventCallback": null,
          "missedMessageListeners": Set {},
          "otherServersMessageListeners": Set {},
          "otherTeams": Array [],
          "otherTeamsChannel": Object {},
          "presenceChannel": null,
          "reconnectCallback": null,
          "reconnectListeners": Set {},
          "reconnecting": false,
          "responseCallbacks": Object {},
          "responseSequence": 1,
          "serverSequence": 0,
          "socketId": null,
          "teamChannel": null,
          "userChannel": null,
          "userTeamChannel": null,
        }
      }
    >
      <span
        id="pluginId"
      >
        ProfilePopoverPlugin
      </span>
    </ProfilePopoverPlugin>
  </PluggableErrorBoundary>
</Pluggable>
`;
